i edit new main tag to indec html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <title>online</title>
   </head>
   <body>
-    
     <h1>welcome to our website</h1>
+    <main>
+      <div class="containert">
+        <h1>product</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus rem nostrum nemo pariatur quod reprehenderit nisi reiciendis voluptatum blanditiis, assumenda laboriosam architecto, neque optio, beatae qui possimus ut! Pariatur, numquam.</p>
+      </div>
+    </main>
   </body>
 </html>
