--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
     <main>
       <div class="containert">
         <h1>product</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus rem nostrum nemo pariatur quod reprehenderit nisi reiciendis voluptatum blanditiis, assumenda laboriosam architecto, neque optio, beatae qui possimus ut! Pariatur, numquam.</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus rem
+          nostrum nemo pariatur quod reprehenderit nisi reiciendis voluptatum
+          blanditiis, assumenda laboriosam architecto, neque optio, beatae qui
+          possimus ut! Pariatur, numquam.
+        </p>
       </div>
     </main>
+
   </body>
 </html>
