--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         </p>
       </div>
     </main>
-
+    <footer>
+      <p>&copy; copyright reserved 2022</p>
+    </footer>
   </body>
 </html>
