--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>online</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#">about</a></li>
+          <li><a href="#">home</a></li>
+          <li><a href="#">contact</a></li>
+          <li><a href="#">navbat</a></li>
+        </ul>
+      </nav>
+    </header>
     <h1>welcome to our website</h1>
     <main>
       <div class="containert">
